@startuml

title __CONTROLLER's Class Diagram__\n

  package com.todolist.controller {
    class ListController {
        - toDoList : ToDoList<Task>
        {static} - listItemStorageController : ListItemStorageController<Task>
        {static} - listController : ListController
        {static} + main()
        - addListItem()
        - editListItem()
        - removeListItem()
        - markListItemDone()
        - markListItemPending()
        + clearScreen()
        + updateScreen()
        + userMenu()
        + printList()
        # sortTaskByProject()
        + getNumItemsInList()
    }
  }
  

  package com.todolist.controller {
    class ListItemStorageController {
        ~ url : URL
        - file : File
        + ListItemStorageController()
        + storeList()
        + loadList()
    }
  }
  

  ListController -up-|> UserInterface
  ListItemStorageController -up-|> ListItemsStorage


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
